09-23-13
 - Weapon pick up text in Netgames.

09-22-13
 - Default to Super Shotgun in Doom 2 games in coop if you have it.
 - Fixed -cdrom parameter.
 - The startup screen should now be extremely close to the original.
   The only thing that is changed is not showing the netgame parameters
   if you're starting single player.

09-21-13
 - Load a custom Gravis UltraSound INI file with -usegusini <filename.ini>.
   Error checks are in place to see if the file exists and if you passed
   something after -usegusini.

09-20-13
 - IDMUS is no longer a cheat.
 - From Heretic v1.3a port:
   * Player Died! message.
 - Disabled cheating in nightmare again, except IDDT and IDCLEV like original.

09-19-13
 - -convertsave <slot #> parameter.  Convert your old saves to the new ones!
   I don't think it will corrupt it, but do a backup first just in case.
 - Z_Free(&savebuffer) when you error out of incorrect versions.

09-18-13
 - Changed priority of the weapon pickup sound.  Stuff was taking over it, and
   I'm sure I don't remember Doom being that weird about it.

09-17-13
 - Fixed animated background intermissions.  Was if(commercial), needed to be
   if(gamemode == commercial).
 - Chex Quest:
   * No longer draws a coop stats intermission.  Text was overlapping,
     entirely way too large. Not worth the effort.
   * Chex(R) Quest Startup.
   * Chex Quest 2 map names.
   * Fixed the boss in Chex Quest 2 being unshootable.
   * Imported most of the Chex Quest Dehacked stuff.  The game is now
     mostly the same, except for a few messages regarding the
     chat macros and "net quest", etc.

09-16-13
 - Warning to use -oldsave.
 - "Sector type 17 is disabled after loading a save game" bug fixed.
   This causes the flickering strobe lights to be restored after loading a
   save. See more at:
   http://doomwiki.org/wiki/Sector_type_17_is_disabled_after_loading_a_saved_game

09-15-13
 - -oldsave parameter to load older save games (i.e. not the 1MB and
    256 string size games).