@@ -977,6 +977,11 @@ void P_DamageMobj ( mobj_t* target, mobj_t* inflictor, mobj_t* source, int damag
 		{
 			return;
 		}
+
+		if(source->type == MT_PLAYER && source->player != player && coop) // FS: No friendly fire
+		{
+			return;
+		}
 	
 		if (player->armortype)
 		{
